--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -8,6 +8,8 @@ dependencies:
   - name: guard
     version: "0.1.18"
     repository: "https://buildwithgrove.github.io/helm-charts"
+    condition: guard.enabled
   - name: watch
     version: "0.1.11"
     repository: "https://buildwithgrove.github.io/helm-charts"
+    condition: watch.enabled
