--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -8,4 +8,4 @@ dependencies:
   - name: gateway-helm
     repository: oci://docker.io/envoyproxy
     version: v1.3.1
-    condition: gateway-helm.enabled
+    condition: envoyGateway.enabled
