--- a/charts/guard/templates/routing/reference_grant.yaml
+++ b/charts/guard/templates/routing/reference_grant.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.middlewareNamespaceReferenceGrant.enabled }}
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: ReferenceGrant
 metadata:
@@ -15,3 +16,4 @@ spec:
   - group: ""
     kind: Service
     name: {{ $.Values.global.middlewareServiceName }}
+{{- end }}
