--- a/charts/path/Chart.yaml
+++ b/charts/path/Chart.yaml
@@ -5,6 +5,7 @@ name: path
 type: application
 version: 0.1.20
 dependencies:
+  # TODO: Remove dependencies for internal charts.
   - name: guard
     version: "0.1.18"
     repository: "https://buildwithgrove.github.io/helm-charts"
