--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -3,8 +3,9 @@ appVersion: "1.0"
 description: A Helm chart for development and production deployments of GUARD (Gateway Utilities for Authentication, Routing & Defense)
 name: guard
 type: application
-version: 0.1.18
+version: 0.1.19
 dependencies:
   - name: gateway-helm
     repository: oci://docker.io/envoyproxy
     version: v1.3.1
+    condition: envoyGateway.enabled
