--wip-- [skip ci]

--- a/charts/guard/templates/routing/httproute-header.yaml
+++ b/charts/guard/templates/routing/httproute-header.yaml
@@ -57,7 +57,7 @@ spec:
   {{- range $.Values.gatewayRef }}
   - group: {{ .group }}
     kind: {{ .kind }}
-    name: {{$gwname}}-{{ .name }}
+    name: {{ .name }}
   {{- end }}
 
   rules:
@@ -91,7 +91,7 @@ spec:
   {{- range $.Values.gatewayRef }}
   - group: {{ .group }}
     kind: {{ .kind }}
-    name: {{$gwname}}-{{ .name }}
+    name: {{ .name }}
   {{- end }}
 
   rules:
