--- a/charts/guard/templates/routing/httproute-healthz.yaml
+++ b/charts/guard/templates/routing/httproute-healthz.yaml
@@ -14,7 +14,7 @@ spec:
   {{- range $.Values.gatewayRef }}
   - group: {{ .group }}
     kind: {{ .kind }}
-    name: {{$gwname}}-{{ .name }}
+    name: {{ .name }}
   {{- end }}
   rules:
     - backendRefs:
