--- a/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
+++ b/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
@@ -17,7 +17,7 @@ spec:
   {{- range $.Values.gatewayRef }}
   - group: {{ .group }}
     kind: {{ .kind }}
-    name: {{$gwname}}-{{ .name }}
+    name: {{ .name }}
   {{- end }}
   rules:
     - backendRefs:
