--- a/charts/guard/templates/routing/httproute-notfound.yaml
+++ b/charts/guard/templates/routing/httproute-notfound.yaml
@@ -18,7 +18,7 @@ spec:
   {{- range $.Values.gatewayRef }}
   - group: {{ .group }}
     kind: {{ .kind }}
-    name: {{$gwname}}-{{ .name }}
+    name: {{ .name }}
   {{- end }}
   rules:
   - matches:
