--- a/charts/guard/templates/routing/httproute-subdomain.yaml
+++ b/charts/guard/templates/routing/httproute-subdomain.yaml
@@ -94,6 +94,10 @@ spec:
             set:
               - name: "target-service-id"
                 value: "{{ .serviceId }}"
+              {{- if $.Values.regionName }}
+              - name: "Auth-Region"
+                value: "{{ $.Values.regionName }}"
+              {{- end }}
       matches:
         - path:
             type: PathPrefix
