--- a/charts/guard/values.yaml
+++ b/charts/guard/values.yaml
@@ -32,6 +32,10 @@ gatewayRef:
 # ** - domain must match the Host header value in HTTP requests received by GUARD/Envoy Gateway. **
 domain: "example.com"
 # **IMPORTANT: specify at least one service: otherwise no requests will be accepted by Envoy Gateway.
+
+# Optional: Set regionName to add Auth-Region header to requests
+# regionName: "us-east-1"
+
 services:
   # Morse-specific services
   - serviceId: F00C
