Guard chart: changes for prod (#85)

--- a/charts/guard/templates/auth-grove/security-policy.yaml
+++ b/charts/guard/templates/auth-grove/security-policy.yaml
@@ -71,7 +71,7 @@ spec:
   targetRefs:
     - group: gateway.networking.k8s.io
       kind: HTTPRoute
-      # eg. F00C-eth-alias-header-route - matches the HTTPRoute resource created above
+      # eg. F00C-eth-alias-header-route - matches the HTTPRoute resource created in httproute-header.yaml
       name: {{ $service.serviceId | lower }}-{{ $alias | lower }}-alias-header-route
   extAuth:
     grpc:
