--- a/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
+++ b/charts/guard/templates/routing/httproute-healthz-no-prefix.yaml
@@ -14,9 +14,11 @@ metadata:
   namespace: {{ $.Values.global.namespace }}
 spec:
   parentRefs:
-  - group: gateway.networking.k8s.io
-    kind: Gateway
-    name: {{$gwname}}-envoy-gateway
+  {{- range $.Values.gatewayRef }}
+  - group: {{ .group }}
+    kind: {{ .kind }}
+    name: {{ .name }}
+  {{- end }}
   rules:
     - backendRefs:
         - group: ""
