--- a/charts/guard/templates/routing/httproute-healthz.yaml
+++ b/charts/guard/templates/routing/httproute-healthz.yaml
@@ -11,8 +11,11 @@ metadata:
   namespace: {{ $.Values.global.namespace }}
 spec:
   parentRefs:
-  - kind: Gateway
-    name: {{$gwname}}-envoy-gateway
+  {{- range $.Values.gatewayRef }}
+  - group: {{ .group }}
+    kind: {{ .kind }}
+    name: {{ .name }}
+  {{- end }}
   rules:
     - backendRefs:
         - group: ""
