--- a/charts/guard/templates/rate-limiter/redis.yaml
+++ b/charts/guard/templates/rate-limiter/redis.yaml
@@ -1,15 +1,10 @@
 {{- if .Values.rateLimit.enabled }}
 ---
-kind: Namespace
-apiVersion: v1
-metadata:
-  name: redis-system 
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
-  namespace: {{ $.Values.global.namespace }}
+  namespace: {{ .Values.global.namespace }}
   labels:
     app: redis
 spec:
@@ -38,10 +33,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis
-  namespace: {{ $.Values.global.namespace }}
+  namespace: {{ .Values.global.namespace }}
   labels:
     app: redis
-  annotations:
 spec:
   ports:
   - name: redis
