--- a/charts/guard/Chart.yaml
+++ b/charts/guard/Chart.yaml
@@ -7,5 +7,6 @@ version: 0.1.20
 dependencies:
   - name: gateway-helm
     repository: oci://docker.io/envoyproxy
+    # TODO_TECHDEBT(@commoddity): Update to release version when v1.4.0 is released
     version: v1.4.0-rc.2
     condition: envoyGateway.enabled
